--- a/app/src/main/res/layout/activity_study_view.xml
+++ b/app/src/main/res/layout/activity_study_view.xml
@@ -1,9 +1,41 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".screens.StudyView">
 
-</android.support.constraint.ConstraintLayout>
+    <com.wajahatkarim3.easyflipview.EasyFlipView
+        android:id="@+id/easyFlipView"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        app:flipDuration="500"
+        app:flipEnabled="true"
+        app:flipFrom="back"
+        app:flipOnTouch="true"
+        app:flipType="vertical"
+        app:autoFlipBack="false"
+        app:autoFlipBackTime="1000"
+        >
+
+        <ImageView
+            android:id="@+id/imgBackCard"
+            android:layout_width="match_parent"
+            android:layout_height="200dp"
+            android:gravity="center"
+            android:src="@drawable/card_back"
+            android:contentDescription="TODO"
+            />
+
+        <ImageView
+            android:id="@+id/imgFrontCard"
+            android:layout_width="match_parent"
+            android:layout_height="200dp"
+            android:gravity="center"
+            android:src="@drawable/card_front"
+            android:contentDescription="TODO"
+            />
+
+    </com.wajahatkarim3.easyflipview.EasyFlipView>
+</LinearLayout>
