--- a/app/src/main/res/layout/card_back.xml
+++ b/app/src/main/res/layout/card_back.xml
@@ -1,8 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:orientation="vertical" android:layout_width="match_parent"
+    android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:layout_marginTop="10dp">
+    android:layout_marginTop="10dp"
+    android:orientation="vertical">
 
     <android.support.v7.widget.CardView
         android:layout_width="match_parent"
@@ -19,64 +20,62 @@
                 android:padding="20dp">
 
                 <TextView
+                    android:id="@+id/card_view_back_index"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_gravity="end"
-                    android:gravity="end"
-                    android:text="Random Word"
-                    android:textAllCaps="true"
-                    android:textSize="12sp"
-                    android:background="@color/gray_trans"
-                    android:padding="12dp"
                     android:layout_alignParentTop="true"
                     android:layout_alignParentEnd="true"
-                    android:id="@+id/card_view_back_index"
-                    android:layout_alignParentRight="true" />
+                    android:layout_gravity="end"
+                    android:background="@color/gray_trans"
+                    android:gravity="end"
+                    android:padding="12dp"
+                    android:text="Random Word"
+                    android:textAllCaps="true"
+                    android:textSize="12sp" />
 
 
-                <TextView android:id="@+id/card_view_back_defintion"
+                <TextView
+                    android:id="@+id/card_view_back_defintion"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:text="reproduce, duplicate"
                     android:layout_marginTop="2dp"
-                    android:textSize="15sp"
-                    />
-
+                    android:text="reproduce, duplicate"
+                    android:textSize="15sp" />
 
             </RelativeLayout>
 
             <View
                 android:layout_width="match_parent"
                 android:layout_height="1dp"
-                android:background="#33000000"
-                android:layout_marginBottom="4dp" />
+                android:layout_marginBottom="4dp"
+                android:background="#33000000" />
 
             <RelativeLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content">
 
-                <Button android:id="@+id/btn_i_dont_know"
-                    android:layout_alignParentLeft="true"
-                    android:layout_alignParentTop="true"
+                <Button
+                    android:id="@+id/btn_i_dont_know"
+                    style="@style/Widget.AppCompat.Button.Borderless"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="I Don't Know!"
-                    android:layout_gravity="center_horizontal"
-                    android:textColor="@color/colorAccent"
-                    style="@style/Widget.AppCompat.Button.Borderless"
-                    android:layout_alignParentStart="true" />
-
-
-                <Button android:id="@+id/btn_i_know"
-                    android:layout_alignParentRight="true"
+                    android:layout_alignParentStart="true"
                     android:layout_alignParentTop="true"
+                    android:layout_gravity="center_horizontal"
+                    android:text="I don't know this word"
+                    android:textColor="@color/colorAccent" />
+
+
+                <Button
+                    android:id="@+id/btn_i_know"
+                    style="@style/Widget.AppCompat.Button.Borderless"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="I Knew this Word!"
+                    android:layout_alignParentTop="true"
+                    android:layout_alignParentEnd="true"
                     android:layout_gravity="center_horizontal"
-                    android:textColor="@color/colorPrimary"
-                    style="@style/Widget.AppCompat.Button.Borderless"
-                    android:layout_alignParentEnd="true" />
+                    android:text="I know this word!"
+                    android:textColor="@color/colorPrimary" />
 
             </RelativeLayout>
 
