--- a/app/src/main/res/layout/activity_study_view.xml
+++ b/app/src/main/res/layout/activity_study_view.xml
@@ -9,18 +9,18 @@
     <com.wajahatkarim3.easyflipview.EasyFlipView
         android:id="@+id/easyFlipView"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="match_parent"
         app:autoFlipBack="false"
         app:autoFlipBackTime="1000"
-        app:flipDuration="500"
+        app:flipDuration="400"
         app:flipEnabled="true"
-        app:flipFrom="back"
         app:flipOnTouch="true"
         app:flipType="vertical">
 
-        <include layout="@layout/card_front" />
-
         <include layout="@layout/card_back" />
 
+        <include layout="@layout/card_front" />
+
     </com.wajahatkarim3.easyflipview.EasyFlipView>
+
 </LinearLayout>
